py_library(
    name = "franka_logging_utils",
    srcs = ["franka_logging_utils.py"],
    deps = [
        "//bindings/pydrake"
    ]
)

py_binary(
    name = "sos",
    srcs = ["sos.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "lqr",
    srcs = ["lqr.py"],
    deps = [
        "//bindings/pydrake",
    ],
)