py_library(
    name = "plotting_utils",
    srcs = ["plotting_utils.py"],
    deps = [
        "//bindings/pydrake"
    ]
)

py_binary(
    name = "global_lyapunov",
    srcs = ["global_lyapunov.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "lqr",
    srcs = ["lqr.py"],
    deps = [
        "//bindings/pydrake",
    ],
)