py_library(
    name = "plotting_utils",
    srcs = ["plotting_utils.py"],
    deps = [
        "//bindings/pydrake"
    ]
)

py_library(
    name = "pendulum_utils",
    srcs = ["pendulum_utils.py"],
    deps = [
        "//bindings/pydrake"
    ]
)


py_binary(
    name = "global_lyapunov",
    srcs = ["global_lyapunov.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "local_lyapunov",
    srcs = ["local_lyapunov.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "pendulum_simulation",
    srcs = ["pendulum_simulation.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "bilinear_ROA",
    srcs = ["bilinear_ROA.py"],
    deps = [
        "//bindings/pydrake",
    ],
)

py_binary(
    name = "lqr",
    srcs = ["lqr.py"],
    deps = [
        "//bindings/pydrake",
    ],
)